# identify_box_error

./: .gitignore  LICENSE  README.md  gui.py  main.py  menu.py  pyproject.toml
app/task/: classify_error_type.py  plot.py  study_in_statistics.py
app/utils/: __init__.py  dataset.py  metrics.py  ops.py  parse.py
pages/: errors_per_image.py  impact.py  proportions.py
test/: conftest.py  test_algorithm.py  test_box_pos_neg.py  test_parse.py  test_statistics.py
test/tmp/: insects.yaml
test/tmp/ground_truth/labels/: test.cache
test/tmp/ground_truth/labels/test/: 2.txt  3.txt  4.txt  5.txt  7.txt
test/tmp/predicted/labels/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
